src/objects/AccountCategoryBean__mdt.object
<CustomObject>
    <fields>
        <fullName>AccountCategory__c</fullName>
        <label>AccountCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigTagId__c</fullName>
        <label>ConfigTagId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsolidateUsage__c</fullName>
        <label>ConsolidateUsage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayValue__c</fullName>
        <label>DisplayValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterimDueDays__c</fullName>
        <label>InterimDueDays</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBusiness__c</fullName>
        <label>IsBusiness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <label>IsInternal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPrepaid__c</fullName>
        <label>IsPrepaid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReseller__c</fullName>
        <label>IsReseller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDisplay__c</fullName>
        <label>ShortDisplay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AccountCategoryBean</label>
    <pluralLabel>AccountCategoryBean</pluralLabel>
</CustomObject>